--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: dynamic_theme
-description: Changes the theme during runtime, also presists brightness settings across restarts
-version: 2.0.0
-homepage: 'https://github.com/Norbert515/dynamic_theme'
+description: Changes the theme during runtime, also presists brightness settings
+  across restarts
+version: 2.1.0
+homepage: "https://github.com/TesteurManiak/dynamic_theme"
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,6 +13,6 @@ dependencies:
   shared_preferences: ">=2.0.0 <3.0.0"
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
