--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: dynamic_theme
 description: Changes the theme during runtime, also presists brightness settings
   across restarts
-version: 2.1.0
+version: 3.0.0
 homepage: "https://github.com/TesteurManiak/dynamic_theme"
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
